Upgrade preset npm

--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "files": [
     ".dist/**/*"
   ],
-  "main": ".dist/src/index.js",
-  "types": ".dist/src/index.d.ts",
+  "main": ".dist/cjs/src/index.js",
+  "module": ".dist/mjs/src/index.js",
+  "types": ".dist/cjs/src/index.d.ts",
   "devDependencies": {
     "@types/jest": "^27",
     "@types/node": "^17.0.41",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "concurrently": "^7.2",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-no-secrets": "^0.8.9",
@@ -43,14 +45,21 @@
     "fix:prettier": "yarn lint:prettier --write",
     "fix:eslint": "yarn lint:eslint --fix",
     "-- lint": "# lint syntax",
-    "lint": "yarn lint:prettier && yarn lint:eslint && yarn lint:tsc",
+    "lint": "concurrently 'yarn lint:prettier' 'yarn lint:eslint' 'yarn lint:tsc'",
     "lint:prettier": "prettier --check \"**/*.{css,md,js,jsx,json,ts,tsx}\"",
     "lint:eslint": "eslint .",
     "lint:tsc": "tsc --build ./ --force",
     "--- npm": "# npm package scripts",
     "build:npm:once": "rm -rf ./.dist/ && yarn test:once && tsc -p tsconfig.ts-build.json && echo 'Finished Building'",
     "build:npm:watch": "rm -rf ./.dist/ && tsc -p tsconfig.ts-build.json --watch",
-    "publish:npm": "yarn publish:npm:patch",
+    "--- build npm": "# build npm",
+    "build:once": "yarn build:clear && yarn test:once && concurrently 'yarn build:cjs' 'yarn build:mjs' && echo 'Finished Building'",
+    "build:watch": "build:clear && tsc -p tsconfig.ts-build.json --watch",
+    "build:clear": "rm -rf ./.dist/",
+    "build:cjs": "tsc -p tsconfig.build-cjs.json",
+    "build:mjs": "tsc -p tsconfig.build-mjs.json",
+    "-- publish npm": "# publish npm package",
+    "publish:npm": "yarn build:once && yarn publish || echo '\"npm publish --access=public\" to publish to npm'",
     "publish:npm:patch": "yarn build:npm:once && yarn version --patch && yarn publish --non-interactive || echo '\"npm publish --access=public\" to publish to npm'",
     "-- end": "# end"
   }
