Update package.json with publish:first

--- a/package.json
+++ b/package.json
@@ -59,8 +59,9 @@
     "build:cjs": "tsc -p tsconfig.build-cjs.json",
     "build:mjs": "tsc -p tsconfig.build-mjs.json",
     "-- publish npm": "# publish npm package",
-    "publish:npm": "yarn build:once && yarn publish || echo '\"npm publish --access=public\" to publish to npm'",
-    "publish:npm:patch": "yarn build:npm:once && yarn version --patch && yarn publish --non-interactive || echo '\"npm publish --access=public\" to publish to npm'",
+    "publish:npm": "yarn build:once && yarn publish || yarn publish:first",
+    "publish:npm:patch": "yarn build:npm:once && yarn version --patch && yarn publish --non-interactive || yarn publish:first",
+    "publish:first": "echo 'IMPORTANT INSTRUCTIONS: This is first publish so please use:\n\n\"npm publish --access=public\"'",
     "-- end": "# end"
   }
 }
