--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@forcloud/jwt-utils": "^1.0.5",
     "@portive/api-types": "^6.0.0",
-    "@portive/jwt-utils": "^1.0.2",
     "@types/jsonwebtoken": "^8.5.8",
     "jsonwebtoken": "^8.5.1"
   },
