--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@portive/auth",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "author": "Sunny Hirai <thesunny@gmail.com>",
   "files": [
@@ -28,8 +28,8 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@forcloud/api-types": "^7.2.1",
     "@forcloud/jwt-utils": "^1.0.5",
-    "@portive/api-types": "^6.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "jsonwebtoken": "^8.5.1"
   },
