--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@portive/auth",
-  "version": "1.0.3",
+  "name": "@forcloud/auth",
+  "version": "1.0.4",
   "license": "MIT",
   "author": "Sunny Hirai <thesunny@gmail.com>",
   "files": [
