Improve the description on the library

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@portive/auth",
   "version": "1.0.7",
-  "description": "A library to help generate auth tokens for use with Portive",
+  "description": "A library to help generate auth tokens for use with Portive's cloud services for open source components",
   "keywords": [
     "portive",
     "auth token"
